Reworked authentication for custom-security-expression and role-hierarchy-voter-demo

--- a/role-hierarchy-voter-demo/src/main/resources/application.properties
+++ b/role-hierarchy-voter-demo/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/role-hierarchy-voter-demo
+
 security.authentication.jwt.secret=Yn2kjibddFAWtnPJ2AFlL8WXmohJMCvigQggaEypa5E=
+security.authentication.jwt.expiration=1d
